[package]
name = "ewald_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "ewald_rust"
crate-type = ["cdylib"]

[dependencies]
numpy = "0.19.0"
pyo3 = { version = "0.19.0", feaiures = ["auto-initialize"] }
statrs = "0.16.0"
